# openbadge

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md  bash.bat  docker-compose-jessie.yml  docker-compose-raspi.yml  docker-compose.yml  docker_run.sh  flash.bat  flash.sh  make.bat  maketest.bat  programming_loop_docker.sh  requirements.txt  serial_test.py
BadgeFramework/: Demo.py  README.md  badge.py  badge_connection.py  badge_legacy.py  badge_protocol.py  badge_protocol.tb  badge_protocol_legacy.py  ble_badge_connection.py  requirements.txt  terminal.py  terminal_legacy.py
IntegrationTests/: Adafruit_BluefruitLE  BadgeFramework  ble_badge_connection.py  disabled_test_1_debug_log.py  integration_test.py  manual_badge_speed_test.py  run_all_tests.py  test_1_debug_log.py  test_1_sync_start_stop.py  test_2_clock_test.py  test_2_sync_start_stop.py  test_3_scan_record_timeout.py  test_3_send_old_timestamp_on_sync.py  test_4_clock_test.py  test_5_record_no_gaps.py  test_6_handle_repeated_requests.py  test_6_send_old_timestamp_on_sync.py  test_7_handle_repeated_requests.py  test_7_receive_data.py
IntegrationTests/LegacyProtocol/: integration_test.py  run_all_tests.py  test_2_sync_start_stop.py  test_3_scan_record_timeout.py  test_4_clock_test.py  test_5_record_no_gaps.py
compose/: Dockerfile  Dockerfile_BACKUP_13100  Dockerfile_jessie  Dockerfile_raspi  Makefile.posix  entry_point.sh  jlink_5.2.9_x86_64.deb
eagle/RFDuino_badge/: RFDuino_badge.brd  RFDuino_badge.sch
eagle/libs/: Badge.lbr  MDBT40.lbr  README.txt  dynastreamN5.lbr  rigado_BMD-200.lbr  st-microelectronics_modified.lbr
eagle/misc/: PCBNG_DRC_by_oren.dru  badge_03v4_job.cam  bom.ulp  centroid_export.ulp  pcbng2layer_v1.1.cam  pcbng2layer_v1.1_openbadge_variation.cam
eagle/nRF_badge/: README.txt
eagle/nRF_badge/Badge_03_v2/: badge_03v2_2layer.brd  badge_03v2_2layer.sch  badge_03v2_FINAL1_dynastream.brd  badge_03v2_FINAL1_rigado.brd
eagle/nRF_badge/Badge_03_v3/: badge_03v3.brd  badge_03v3.sch
eagle/nRF_badge/Badge_03_v4/: badge_03v4.brd  badge_03v4.sch  move.sh
eagle/nRF_badge/Badge_03_v5/: README.txt  badge_03v5.brd  badge_03v5.sch  move.sh
eagle/nRF_badge/Badge_03_v6/: badge_03v6.brd  badge_03v6.sch  move.sh
eagle/nRF_badge/Badge_03_v6_LIS2DH12_breakout/: lis2dh12_breakout.brd  lis2dh12_breakout.sch  move.sh
eagle/nRF_badge/Badge_03v2-Prog/: Badge_03v2-prog-2layer.brd  Badge_03v2-prog-2layer.sch  Badge_03v2-prog-schem.brd  Badge_03v2-prog-schem.sch
firmware/RFDuino_badge/: RFDuino_badge.ino  flashHandling.cpp
firmware/RFDuino_badge/data_collector/: flashHandling.h
firmware/RFDuino_badge/mic_stream/: mic_stream.ino
firmware/nRF_badge/: README.txt
firmware/nRF_badge/config/: pstorage_platform.h
firmware/nRF_badge/data_collector/: Makefile  Maketests  README.md  README.txt  beacon_scan_test.c  main.c  original_main.c  test.c  test.sh
firmware/nRF_badge/incl/: badge_03v2_rigado.h  ble_setup.c  custom_board.h  external_flash.c  external_flash.h  rtc_timing.c
firmware/nRF_badge/rssi_scanner/: log_to_csv.py  main.c  serial_test.py
firmware/nRF_badge/util/: fixMAC  flashAndGetMAC  flashBadge.jlink  getMAC  getMAC.sh  programming_loop.sh  readRawMAC.jlink  testing_loop.sh
holderTests/: badge ages  batchage_analysis-oren.ipynb  batchage_analysis.ipynb  holder_analysis.ipynb
holderTests/logs_antistatic/BLE_range_test_10ft_antistatic_CSV/: 000.csv
holderTests/logs_antistatic/BLE_range_test_2ft_antistatic_CSV/: 000.csv
holderTests/logs_antistatic/BLE_range_test_4ft_antistatic_CSV/: 000.csv
holderTests/logs_antistatic/BLE_range_test_6ft_antistatic_CSV/: 000.csv
holderTests/logs_antistatic/BLE_range_test_8ft_antistatic_CSV/: 000.csv
holderTests/logs_noantistatic/BLE_range_test_10ft_noantistatic_CSV/: 000.csv
holderTests/logs_noantistatic/BLE_range_test_2ft_noantistatic_CSV/: 000.csv
holderTests/logs_noantistatic/BLE_range_test_4ft_noantistatic_CSV/: 000.csv
holderTests/logs_noantistatic/BLE_range_test_6ft_noantistatic_CSV/: 000.csv
holderTests/logs_noantistatic/BLE_range_test_8ft_noantistatic_CSV/: 000.csv
holderTests/logs_oldvnew/3ft_CSV/: 000.csv
holderTests/logs_oldvnew/4ft_CSV/: 000.csv
holderTests/logs_oldvnew/8ft_CSV/: 000.csv
holderTests/logs_oldvnew1/10ft_CSV/: 000.csv
holderTests/logs_oldvnew1/1m_CSV/: 000.csv
holderTests/logs_oldvnew1/2ft_CSV/: 000.csv
holderTests/logs_oldvnew1/5ft_CSV/: 000.csv
holderTests/logs_oldvnew1/6ft_CSV/: 000.csv
holderTests/logs_oldvnew2/10ft_CSV/: 000.csv
holderTests/logs_oldvnew2/1m_CSV/: 000.csv
holderTests/logs_oldvnew2/2ft_CSV/: 000.csv
holderTests/logs_oldvnew2/3ft_CSV/: 000.csv
holderTests/logs_oldvnew2/4ft_CSV/: 000.csv
holderTests/logs_oldvnew2/5ft_CSV/: 000.csv
holderTests/logs_oldvnew2/6ft_CSV/: 000.csv
holderTests/logs_oldvnew2/8ft_CSV/: 000.csv
playbooks/: main.yml
src/: badge.py  badge_discoverer.py  badge_server.py  ble_scanner.py  device_macs.txt.all  last_update.py  rfd.py  scanner.py  sync_only.py
src/RFDuino_server/: badge_discoverer.py
src/data_analyzer/: .env  .gitignore  README.md  app_data_decode_explained.ipynb  app_data_loader.py  badge_battery_graph.ipynb  check_gaps.ipynb  check_gaps2.ipynb  check_gaps_in_app_logs.ipynb  data_analyzer.ipynb  data_loader.py  data_loader2.py  moved.txt  requirements.txt
src/nRF_hub/: .env_template  .gitignore  badge.py  badge_dialogue.py  badge_discoverer.py  badge_hub.py  badge_manager_server.py  badge_manager_standalone.py  badges_manager_server.py  badges_manager_standalone.py  hub_manager.py  nrf.py  server.py  settings.py
src/nRF_mobile/: .gitignore  README.md  config.xml  init.sh  run_cordova.sh  runsafe.sh
src/nRF_mobile/hooks/: README.md
src/nRF_mobile/test/: DataAnalyzer.test.html
src/nRF_mobile/www/: index.html
src/nRF_mobile_streamer/: .gitignore  config.xml
src/nRF_server/: .gitignore  badge.py  badge_db.py  badge_dialogue.py  badge_discoverer.py  badge_hub.py  badge_server.py  ble_scanner.py  bleserver.py  nrf.py  server.py  sync_only.py
utils/: check_badge_id_crc_duplicates.ipynb
(+511 files in other folders)
